--- a/slides/index.html
+++ b/slides/index.html
@@ -17,8 +17,8 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-	<title>Connecting your shiz.js with AOP</title>
-	<meta name="description" content="Connecting your shiz.js with AOP @ JSConf 2013">
+	<title>S2GX 2013: AOP-ing your JavaScript</title>
+	<meta name="description" content="S2GX 2013: AOP-ing your JavaScript">
 	<meta name="author" content="Brian Cavalier">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, maximum-scale=1.0">
