--- a/demo-app/index.html
+++ b/demo-app/index.html
@@ -10,13 +10,13 @@
 </head>
 <body>
     <div id="main">
-        <h1>Ye Olde Nodebot Shoppe</h1>
+        <h1>S2GX Boardgame Supply Shop</h1>
         <div class="messages-container">
             <p class="message adding">Adding item to cart</p>
             <p class="message added">Item added</p>
         </div>
         <div class="product-container">
-            <h2>Fun and mostly harmless add-ons</h2>
+            <h2>For all your most important boardgame needs</h2>
             <div id="product-list"></div>
         </div>
         <div class="cart-container">
